--- a/Home.html
+++ b/Home.html
@@ -12,36 +12,36 @@
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
 
-    <link rel="stylesheet" href="/JL Gym/Home.css">
+    <link rel="stylesheet" href="./Home.css">
 
 </head>
 <body>
     <div class="home">
 
         <header>
-            <img id="logo" src="/JL Gym/imagens/exemploLogo.png" alt="JL GYM">
+            <img id="logo" src="./exemploLogo.png" alt="JL GYM">
 
             <div class="infos">
                 <ul>
-                    <img id="endimg" src="/JL Gym/imagens/loc.png" alt="">
+                    <img id="endimg" src="./loc.png" alt="">
                     <li id="end">
                         <h5>ENDEREÇO</h5>
                         <h6>AV. Aristofanes Fernandes, 165</h6>
                         <h6>Jandaíra-RN</h6>
                     </li>
 
-                    <img id="divisoria" src="/JL Gym/imagens/divisoria.png" alt="">
+                    <img id="divisoria" src="./divisoria.png" alt="">
 
-                    <img id="contimg" src="/JL Gym/imagens/fone.png" alt="">
+                    <img id="contimg" src="./fone.png" alt="">
                     <li id="cont">
                         <h5>CONTATOS</h5>
                         <h6>(84) 9 8843-2933</h6>
                         <h6>jlgym@gmail.com</h6>
                     </li>
 
-                    <img id="divisoria" src="/JL Gym/imagens/divisoria.png" alt="">
+                    <img id="divisoria" src="./divisoria.png" alt="">
                     
-                    <img id="funcimg" src="/JL Gym/imagens/funcionamento.png" alt="">
+                    <img id="funcimg" src="./funcionamento.png" alt="">
                     <li id="func">
                         <h5>FUNCIONAMENTO</h5>
                         <h6>Seg a Sáb</h6>
